--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStudio-hw-03</title>
+    <title>WebStudio-hw-04</title>
     <!-- Project fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -47,14 +47,20 @@
         </nav>
         <ul class="header-mail-phone">
           <li class="header-item">
-            <a class="header-contact" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+            <a class="header-contact" href="mailto:info@devstudio.com">
+              <svg class="header-icon" width="16" , height="12">
+                <use href="./icons/sprite.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="header-item">
-            <a class="header-contact" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
+            <a class="header-contact" href="tel:+380961111111">
+              <svg class="header-icon" width="16" , height="12">
+                <use href="./icons/sprite.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
