--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </ul>
         </nav>
         <ul class="header-mail-phone">
-          <li class="header-item">
+          <li class="header-item icon-envelope">
             <a class="header-contact" href="mailto:info@devstudio.com">
               <svg class="header-icon" width="16" , height="12">
                 <use href="./icons/sprite.svg#icon-envelope"></use>
@@ -54,9 +54,9 @@
               info@devstudio.com
             </a>
           </li>
-          <li class="header-item">
+          <li class="header-item icon-smartphone">
             <a class="header-contact" href="tel:+380961111111">
-              <svg class="header-icon" width="16" , height="12">
+              <svg class="header-icon" width="10" , height="16">
                 <use href="./icons/sprite.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
