добавил Ховер в Хэдер

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </ul>
         </nav>
         <ul class="header-mail-phone">
-          <li class="header-item icon-envelope">
+          <li class="header-item">
             <a class="header-contact" href="mailto:info@devstudio.com">
               <svg class="header-icon" width="16" , height="12">
                 <use href="./icons/sprite.svg#icon-envelope"></use>
@@ -54,7 +54,7 @@
               info@devstudio.com
             </a>
           </li>
-          <li class="header-item icon-smartphone">
+          <li class="header-item">
             <a class="header-contact" href="tel:+380961111111">
               <svg class="header-icon" width="10" , height="16">
                 <use href="./icons/sprite.svg#icon-smartphone"></use>
