Заменил Хэдер в Портфолио, добавил иконки в Чем занимаемся

--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
           <h2 class="section-uppertitle visually-hidden">Особенности</h2>
           <ul class="section-list">
             <li class="section-item">
+              <div class="features-icon-section">
+                <svg class="features-icon" width="70" height="70">
+                  <use href="./icons/sprite.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="section-title">Внимание к деталям</h3>
               <p class="section-description">
                 Идейные соображения, а также начало повседневной работы по
@@ -90,6 +95,11 @@
               </p>
             </li>
             <li class="section-item">
+              <div class="features-icon-section">
+                <svg class="features-icon" width="70" height="70">
+                  <use href="./icons/sprite.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="section-title">Пунктуальность</h3>
               <p class="section-description">
                 Задача организации, в особенности же рамки и место обучения
@@ -97,6 +107,11 @@
               </p>
             </li>
             <li class="section-item">
+              <div class="features-icon-section">
+                <svg class="features-icon" width="70" height="70">
+                  <use href="./icons/sprite.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="section-title">Планирование</h3>
               <p class="section-description">
                 Равным образом консультация с широким активом в значительной
@@ -104,6 +119,11 @@
               </p>
             </li>
             <li class="section-item">
+              <div class="features-icon-section">
+                <svg class="features-icon" width="70" height="70">
+                  <use href="./icons/sprite.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="section-title">Современные технологии</h3>
               <p class="section-description">
                 Значимость этих проблем настолько очевидна, что реализация
