Добавил иконки и тень команде

--- a/index.html
+++ b/index.html
@@ -187,6 +187,36 @@
                 <div class="team-content">
                   <h3 class="team-title">Игорь Демьяненко</h3>
                   <p class="team-description" lang="en">Product Designer</p>
+                  <ul class="team-button-list">
+                    <li class="team-button-item">
+                      <button class="team-button">
+                        <svg class="team-button-icon" width="20" height="20">
+                          <use href="./icons/sprite.svg#icon-instagram"></use>
+                        </svg>
+                      </button>
+                    </li>
+                    <li class="team-button-item">
+                      <button class="team-button">
+                        <svg class="team-button-icon" width="20" height="20">
+                          <use href="./icons/sprite.svg#icon-twitter"></use>
+                        </svg>
+                      </button>
+                    </li>
+                    <li class="team-button-item">
+                      <button class="team-button">
+                        <svg class="team-button-icon" width="20" height="20">
+                          <use href="./icons/sprite.svg#icon-facebook"></use>
+                        </svg>
+                      </button>
+                    </li>
+                    <li class="team-button-item">
+                      <button class="team-button">
+                        <svg class="team-button-icon" width="20" height="20">
+                          <use href="./icons/sprite.svg#icon-linkedin"></use>
+                        </svg>
+                      </button>
+                    </li>
+                  </ul>
                 </div>
               </article>
             </li>
@@ -199,10 +229,39 @@
                   width="270"
                   height="260"
                 />
-
                 <div class="team-content">
                   <h3 class="team-title">Ольга Репина</h3>
                   <p class="team-description" lang="en">Frontend Developer</p>
+                  <ul class="team-button-list">
+                    <li class="team-button-item">
+                      <button class="team-button">
+                        <svg class="team-button-icon" width="20" height="20">
+                          <use href="./icons/sprite.svg#icon-instagram"></use>
+                        </svg>
+                      </button>
+                    </li>
+                    <li class="team-button-item">
+                      <button class="team-button">
+                        <svg class="team-button-icon" width="20" height="20">
+                          <use href="./icons/sprite.svg#icon-twitter"></use>
+                        </svg>
+                      </button>
+                    </li>
+                    <li class="team-button-item">
+                      <button class="team-button">
+                        <svg class="team-button-icon" width="20" height="20">
+                          <use href="./icons/sprite.svg#icon-facebook"></use>
+                        </svg>
+                      </button>
+                    </li>
+                    <li class="team-button-item">
+                      <button class="team-button">
+                        <svg class="team-button-icon" width="20" height="20">
+                          <use href="./icons/sprite.svg#icon-linkedin"></use>
+                        </svg>
+                      </button>
+                    </li>
+                  </ul>
                 </div>
               </article>
             </li>
@@ -215,10 +274,39 @@
                   width="270"
                   height="260"
                 />
-
                 <div class="team-content">
                   <h3 class="team-title">Николай Тарасов</h3>
                   <p class="team-description" lang="en">Marketing</p>
+                  <ul class="team-button-list">
+                    <li class="team-button-item">
+                      <button class="team-button">
+                        <svg class="team-button-icon" width="20" height="20">
+                          <use href="./icons/sprite.svg#icon-instagram"></use>
+                        </svg>
+                      </button>
+                    </li>
+                    <li class="team-button-item">
+                      <button class="team-button">
+                        <svg class="team-button-icon" width="20" height="20">
+                          <use href="./icons/sprite.svg#icon-twitter"></use>
+                        </svg>
+                      </button>
+                    </li>
+                    <li class="team-button-item">
+                      <button class="team-button">
+                        <svg class="team-button-icon" width="20" height="20">
+                          <use href="./icons/sprite.svg#icon-facebook"></use>
+                        </svg>
+                      </button>
+                    </li>
+                    <li class="team-button-item">
+                      <button class="team-button">
+                        <svg class="team-button-icon" width="20" height="20">
+                          <use href="./icons/sprite.svg#icon-linkedin"></use>
+                        </svg>
+                      </button>
+                    </li>
+                  </ul>
                 </div>
               </article>
             </li>
@@ -235,6 +323,36 @@
                 <div class="team-content">
                   <h3 class="team-title">Михаил Ермаков</h3>
                   <p class="team-description" lang="en">UI Designer</p>
+                  <ul class="team-button-list">
+                    <li class="team-button-item">
+                      <button class="team-button">
+                        <svg class="team-button-icon" width="20" height="20">
+                          <use href="./icons/sprite.svg#icon-instagram"></use>
+                        </svg>
+                      </button>
+                    </li>
+                    <li class="team-button-item">
+                      <button class="team-button">
+                        <svg class="team-button-icon" width="20" height="20">
+                          <use href="./icons/sprite.svg#icon-twitter"></use>
+                        </svg>
+                      </button>
+                    </li>
+                    <li class="team-button-item">
+                      <button class="team-button">
+                        <svg class="team-button-icon" width="20" height="20">
+                          <use href="./icons/sprite.svg#icon-facebook"></use>
+                        </svg>
+                      </button>
+                    </li>
+                    <li class="team-button-item">
+                      <button class="team-button">
+                        <svg class="team-button-icon" width="20" height="20">
+                          <use href="./icons/sprite.svg#icon-linkedin"></use>
+                        </svg>
+                      </button>
+                    </li>
+                  </ul>
                 </div>
               </article>
             </li>
