добавил соц сети в Футер

--- a/portfolio.html
+++ b/portfolio.html
@@ -254,24 +254,66 @@
     <!-- Футер-->
     <footer class="footer">
       <div class="container footer-container">
-        <a class="logo" href="index.html" lang="en"
-          >Web<span class="logo-footer">Studio</span></a
-        >
-        <address class="address">
-          <ul class="address-list">
-            <li class="address-footer">г. Киев, пр-т Леси Украинки, 26</li>
-            <li class="address-item">
-              <a class="footer-contact" href="mailto:info@example.com"
-                >info@example.com</a
-              >
-            </li>
-            <li class="address-item">
-              <a class="footer-contact" href="tel:+380991111111"
-                >+38 099 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
+        <ul class="footer-list">
+          <!-- Logo, address, phone -->
+
+          <li class="footer-item">
+            <a class="logo" href="index.html" lang="en"
+              >Web<span class="logo-footer">Studio</span></a
+            >
+            <address class="address">
+              <ul class="address-list">
+                <li class="address-footer">г. Киев, пр-т Леси Украинки, 26</li>
+                <li class="address-item">
+                  <a class="footer-contact" href="mailto:info@example.com"
+                    >info@example.com</a
+                  >
+                </li>
+                <li class="address-item">
+                  <a class="footer-contact" href="tel:+380991111111"
+                    >+38 099 111 11 11</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </li>
+
+          <!-- Join socials -->
+
+          <li class="footer-item">
+            <p class="footer-item-join">Присоединяйтесь</p>
+            <ul class="team-button-list">
+              <li class="team-button-item">
+                <button class="team-button">
+                  <svg class="team-button-icon" width="20" height="20">
+                    <use href="./icons/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </button>
+              </li>
+              <li class="team-button-item">
+                <button class="team-button">
+                  <svg class="team-button-icon" width="20" height="20">
+                    <use href="./icons/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </button>
+              </li>
+              <li class="team-button-item">
+                <button class="team-button">
+                  <svg class="team-button-icon" width="20" height="20">
+                    <use href="./icons/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </button>
+              </li>
+              <li class="team-button-item">
+                <button class="team-button">
+                  <svg class="team-button-icon" width="20" height="20">
+                    <use href="./icons/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </button>
+              </li>
+            </ul>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
