--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <ul class="header-mail-phone">
           <li class="header-item">
             <a class="header-contact" href="mailto:info@devstudio.com">
-              <svg class="header-icon" width="16" , height="12">
+              <svg class="header-icon" width="16" height="12">
                 <use href="./icons/sprite.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
@@ -56,7 +56,7 @@
           </li>
           <li class="header-item">
             <a class="header-contact" href="tel:+380961111111">
-              <svg class="header-icon" width="10" , height="16">
+              <svg class="header-icon" width="10" height="16">
                 <use href="./icons/sprite.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
@@ -362,6 +362,7 @@
 
       <!-- Постоянные клиенты -->
       <section class="clients section">
+        <h2 class="section-uppertitle">Постоянные клиенты</h2>
         <div class="container">
           <ul class="clients-list">
             <li class="clients-item">
