--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
         <ul class="header-mail-phone">
           <li class="header-item">
             <a class="header-contact" href="mailto:info@devstudio.com">
-              <svg class="header-icon" width="16" , height="12">
+              <svg class="header-icon" width="16" height="12">
                 <use href="./icons/sprite.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
@@ -58,7 +58,7 @@
           </li>
           <li class="header-item">
             <a class="header-contact" href="tel:+380961111111">
-              <svg class="header-icon" width="10" , height="16">
+              <svg class="header-icon" width="10" height="16">
                 <use href="./icons/sprite.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
