--- a/index.html
+++ b/index.html
@@ -47,20 +47,24 @@
         </nav>
         <ul class="header-mail-phone">
           <li class="header-item">
-            <a class="header-contact" href="mailto:info@devstudio.com">
+            <div class="header-contact-block">
               <svg class="header-icon" width="16" height="12">
                 <use href="./icons/sprite.svg#icon-envelope"></use>
               </svg>
-              info@devstudio.com
-            </a>
+              <a class="header-contact" href="mailto:info@devstudio.com">
+                info@devstudio.com
+              </a>
+            </div>
           </li>
           <li class="header-item">
-            <a class="header-contact" href="tel:+380961111111">
+            <div class="header-contact-block">
               <svg class="header-icon" width="10" height="16">
                 <use href="./icons/sprite.svg#icon-smartphone"></use>
               </svg>
-              +38 096 111 11 11
-            </a>
+              <a class="header-contact" href="tel:+380961111111">
+                +38 096 111 11 11
+              </a>
+            </div>
           </li>
         </ul>
       </div>
@@ -187,34 +191,58 @@
                 <div class="team-content">
                   <h3 class="team-title">Игорь Демьяненко</h3>
                   <p class="team-description" lang="en">Product Designer</p>
-                  <ul class="team-button-list">
-                    <li class="team-button-item">
-                      <button class="team-button">
-                        <svg class="team-button-icon" width="20" height="20">
+                  <ul class="socials-list">
+                    <li class="socials-item">
+                      <a
+                        class="socials-link"
+                        href=""
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="Instafram"
+                      >
+                        <svg class="socials-icon" width="20" height="20">
                           <use href="./icons/sprite.svg#icon-instagram"></use>
                         </svg>
-                      </button>
+                      </a>
                     </li>
-                    <li class="team-button-item">
-                      <button class="team-button">
-                        <svg class="team-button-icon" width="20" height="20">
+                    <li class="socials-item">
+                      <a
+                        class="socials-link"
+                        href=""
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="twitter"
+                      >
+                        <svg class="socials-icon" width="20" height="20">
                           <use href="./icons/sprite.svg#icon-twitter"></use>
                         </svg>
-                      </button>
+                      </a>
                     </li>
-                    <li class="team-button-item">
-                      <button class="team-button">
-                        <svg class="team-button-icon" width="20" height="20">
+                    <li class="socials-item">
+                      <a
+                        class="socials-link"
+                        href=""
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="facebook"
+                      >
+                        <svg class="socials-icon" width="20" height="20">
                           <use href="./icons/sprite.svg#icon-facebook"></use>
                         </svg>
-                      </button>
+                      </a>
                     </li>
-                    <li class="team-button-item">
-                      <button class="team-button">
-                        <svg class="team-button-icon" width="20" height="20">
+                    <li class="socials-item">
+                      <a
+                        class="socials-link"
+                        href=""
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="linkedin"
+                      >
+                        <svg class="socials-icon" width="20" height="20">
                           <use href="./icons/sprite.svg#icon-linkedin"></use>
                         </svg>
-                      </button>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -232,34 +260,58 @@
                 <div class="team-content">
                   <h3 class="team-title">Ольга Репина</h3>
                   <p class="team-description" lang="en">Frontend Developer</p>
-                  <ul class="team-button-list">
-                    <li class="team-button-item">
-                      <button class="team-button">
-                        <svg class="team-button-icon" width="20" height="20">
+                  <ul class="socials-list">
+                    <li class="socials-item">
+                      <a
+                        class="socials-link"
+                        href=""
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="Instafram"
+                      >
+                        <svg class="socials-icon" width="20" height="20">
                           <use href="./icons/sprite.svg#icon-instagram"></use>
                         </svg>
-                      </button>
+                      </a>
                     </li>
-                    <li class="team-button-item">
-                      <button class="team-button">
-                        <svg class="team-button-icon" width="20" height="20">
+                    <li class="socials-item">
+                      <a
+                        class="socials-link"
+                        href=""
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="twitter"
+                      >
+                        <svg class="socials-icon" width="20" height="20">
                           <use href="./icons/sprite.svg#icon-twitter"></use>
                         </svg>
-                      </button>
+                      </a>
                     </li>
-                    <li class="team-button-item">
-                      <button class="team-button">
-                        <svg class="team-button-icon" width="20" height="20">
+                    <li class="socials-item">
+                      <a
+                        class="socials-link"
+                        href=""
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="facebook"
+                      >
+                        <svg class="socials-icon" width="20" height="20">
                           <use href="./icons/sprite.svg#icon-facebook"></use>
                         </svg>
-                      </button>
+                      </a>
                     </li>
-                    <li class="team-button-item">
-                      <button class="team-button">
-                        <svg class="team-button-icon" width="20" height="20">
+                    <li class="socials-item">
+                      <a
+                        class="socials-link"
+                        href=""
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="linkedin"
+                      >
+                        <svg class="socials-icon" width="20" height="20">
                           <use href="./icons/sprite.svg#icon-linkedin"></use>
                         </svg>
-                      </button>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -277,34 +329,58 @@
                 <div class="team-content">
                   <h3 class="team-title">Николай Тарасов</h3>
                   <p class="team-description" lang="en">Marketing</p>
-                  <ul class="team-button-list">
-                    <li class="team-button-item">
-                      <button class="team-button">
-                        <svg class="team-button-icon" width="20" height="20">
+                  <ul class="socials-list">
+                    <li class="socials-item">
+                      <a
+                        class="socials-link"
+                        href=""
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="Instafram"
+                      >
+                        <svg class="socials-icon" width="20" height="20">
                           <use href="./icons/sprite.svg#icon-instagram"></use>
                         </svg>
-                      </button>
+                      </a>
                     </li>
-                    <li class="team-button-item">
-                      <button class="team-button">
-                        <svg class="team-button-icon" width="20" height="20">
+                    <li class="socials-item">
+                      <a
+                        class="socials-link"
+                        href=""
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="twitter"
+                      >
+                        <svg class="socials-icon" width="20" height="20">
                           <use href="./icons/sprite.svg#icon-twitter"></use>
                         </svg>
-                      </button>
+                      </a>
                     </li>
-                    <li class="team-button-item">
-                      <button class="team-button">
-                        <svg class="team-button-icon" width="20" height="20">
+                    <li class="socials-item">
+                      <a
+                        class="socials-link"
+                        href=""
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="facebook"
+                      >
+                        <svg class="socials-icon" width="20" height="20">
                           <use href="./icons/sprite.svg#icon-facebook"></use>
                         </svg>
-                      </button>
+                      </a>
                     </li>
-                    <li class="team-button-item">
-                      <button class="team-button">
-                        <svg class="team-button-icon" width="20" height="20">
+                    <li class="socials-item">
+                      <a
+                        class="socials-link"
+                        href=""
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="linkedin"
+                      >
+                        <svg class="socials-icon" width="20" height="20">
                           <use href="./icons/sprite.svg#icon-linkedin"></use>
                         </svg>
-                      </button>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -323,34 +399,58 @@
                 <div class="team-content">
                   <h3 class="team-title">Михаил Ермаков</h3>
                   <p class="team-description" lang="en">UI Designer</p>
-                  <ul class="team-button-list">
-                    <li class="team-button-item">
-                      <button class="team-button">
-                        <svg class="team-button-icon" width="20" height="20">
+                  <ul class="socials-list">
+                    <li class="socials-item">
+                      <a
+                        class="socials-link"
+                        href=""
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="Instafram"
+                      >
+                        <svg class="socials-icon" width="20" height="20">
                           <use href="./icons/sprite.svg#icon-instagram"></use>
                         </svg>
-                      </button>
+                      </a>
                     </li>
-                    <li class="team-button-item">
-                      <button class="team-button">
-                        <svg class="team-button-icon" width="20" height="20">
+                    <li class="socials-item">
+                      <a
+                        class="socials-link"
+                        href=""
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="twitter"
+                      >
+                        <svg class="socials-icon" width="20" height="20">
                           <use href="./icons/sprite.svg#icon-twitter"></use>
                         </svg>
-                      </button>
+                      </a>
                     </li>
-                    <li class="team-button-item">
-                      <button class="team-button">
-                        <svg class="team-button-icon" width="20" height="20">
+                    <li class="socials-item">
+                      <a
+                        class="socials-link"
+                        href=""
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="facebook"
+                      >
+                        <svg class="socials-icon" width="20" height="20">
                           <use href="./icons/sprite.svg#icon-facebook"></use>
                         </svg>
-                      </button>
+                      </a>
                     </li>
-                    <li class="team-button-item">
-                      <button class="team-button">
-                        <svg class="team-button-icon" width="20" height="20">
+                    <li class="socials-item">
+                      <a
+                        class="socials-link"
+                        href=""
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="linkedin"
+                      >
+                        <svg class="socials-icon" width="20" height="20">
                           <use href="./icons/sprite.svg#icon-linkedin"></use>
                         </svg>
-                      </button>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -362,8 +462,8 @@
 
       <!-- Постоянные клиенты -->
       <section class="clients section">
-        <h2 class="section-uppertitle">Постоянные клиенты</h2>
         <div class="container">
+          <h2 class="section-uppertitle">Постоянные клиенты</h2>
           <ul class="clients-list">
             <li class="clients-item">
               <a href="" class="clients-link">
@@ -443,34 +543,58 @@
 
           <li class="footer-item">
             <p class="footer-item-join">Присоединяйтесь</p>
-            <ul class="team-button-list">
-              <li class="team-button-item">
-                <button class="team-button">
-                  <svg class="team-button-icon" width="20" height="20">
+            <ul class="socials-list">
+              <li class="socials-item">
+                <a
+                  class="socials-link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Instafram"
+                >
+                  <svg class="socials-icon" width="20" height="20">
                     <use href="./icons/sprite.svg#icon-instagram"></use>
                   </svg>
-                </button>
+                </a>
               </li>
-              <li class="team-button-item">
-                <button class="team-button">
-                  <svg class="team-button-icon" width="20" height="20">
+              <li class="socials-item">
+                <a
+                  class="socials-link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="twitter"
+                >
+                  <svg class="socials-icon" width="20" height="20">
                     <use href="./icons/sprite.svg#icon-twitter"></use>
                   </svg>
-                </button>
+                </a>
               </li>
-              <li class="team-button-item">
-                <button class="team-button">
-                  <svg class="team-button-icon" width="20" height="20">
+              <li class="socials-item">
+                <a
+                  class="socials-link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="facebook"
+                >
+                  <svg class="socials-icon" width="20" height="20">
                     <use href="./icons/sprite.svg#icon-facebook"></use>
                   </svg>
-                </button>
+                </a>
               </li>
-              <li class="team-button-item">
-                <button class="team-button">
-                  <svg class="team-button-icon" width="20" height="20">
+              <li class="socials-item">
+                <a
+                  class="socials-link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="linkedin"
+                >
+                  <svg class="socials-icon" width="20" height="20">
                     <use href="./icons/sprite.svg#icon-linkedin"></use>
                   </svg>
-                </button>
+                </a>
               </li>
             </ul>
           </li>
