--- a/portfolio.html
+++ b/portfolio.html
@@ -49,20 +49,24 @@
         </nav>
         <ul class="header-mail-phone">
           <li class="header-item">
-            <a class="header-contact" href="mailto:info@devstudio.com">
+            <div class="header-contact-block">
               <svg class="header-icon" width="16" height="12">
                 <use href="./icons/sprite.svg#icon-envelope"></use>
               </svg>
-              info@devstudio.com
-            </a>
+              <a class="header-contact" href="mailto:info@devstudio.com">
+                info@devstudio.com
+              </a>
+            </div>
           </li>
           <li class="header-item">
-            <a class="header-contact" href="tel:+380961111111">
+            <div class="header-contact-block">
               <svg class="header-icon" width="10" height="16">
                 <use href="./icons/sprite.svg#icon-smartphone"></use>
               </svg>
-              +38 096 111 11 11
-            </a>
+              <a class="header-contact" href="tel:+380961111111">
+                +38 096 111 11 11
+              </a>
+            </div>
           </li>
         </ul>
       </div>
