--- a/portfolio.html
+++ b/portfolio.html
@@ -101,7 +101,7 @@
           <div class="container projects-container">
             <ul class="projects-list">
               <li class="projects-item">
-                <div class="projects-card">
+                <a class="projects-card" href="">
                   <img
                     class="projects-img"
                     src="./images/project-1.jpg"
@@ -113,10 +113,10 @@
                     <h2 class="projects-title">Технокряк</h2>
                     <p class="projects-description">Веб-сайт</p>
                   </div>
-                </div>
+                </a>
               </li>
               <li class="projects-item">
-                <div class="projects-card">
+                <a class="projects-card" href="">
                   <img
                     class="projects-img"
                     src="./images/project-2.jpg"
@@ -130,10 +130,10 @@
                     </h2>
                     <p class="projects-description">Дизайн</p>
                   </div>
-                </div>
+                </a>
               </li>
               <li class="projects-item">
-                <div class="projects-card">
+                <a class="projects-card" href="">
                   <img
                     class="projects-img"
                     src="./images/project-3.jpg"
@@ -147,10 +147,10 @@
                     </h2>
                     <p class="projects-description">Приложение</p>
                   </div>
-                </div>
+                </a>
               </li>
               <li class="projects-item">
-                <div class="projects-card">
+                <a class="projects-card" href="">
                   <img
                     class="projects-img"
                     src="./images/project-4.jpg"
@@ -164,10 +164,10 @@
                     </h2>
                     <p class="projects-description">Маркетинг</p>
                   </div>
-                </div>
+                </a>
               </li>
               <li class="projects-item">
-                <div class="projects-card">
+                <a class="projects-card" href="">
                   <img
                     src="./images/project-5.jpg"
                     alt="Проект Boxes"
@@ -180,10 +180,10 @@
                     </h2>
                     <p class="projects-description">Приложение</p>
                   </div>
-                </div>
+                </a>
               </li>
               <li class="projects-item">
-                <div class="projects-card">
+                <a class="projects-card" href="">
                   <img
                     class="projects-img"
                     src="./images/project-6.jpg"
@@ -197,10 +197,10 @@
                     </h2>
                     <p class="projects-description">Веб-сайт</p>
                   </div>
-                </div>
+                </a>
               </li>
               <li class="projects-item">
-                <div class="projects-card">
+                <a class="projects-card" href="">
                   <img
                     class="projects-img"
                     src="./images/project-7.jpg"
@@ -214,10 +214,10 @@
                     </h2>
                     <p class="projects-description">Дизайн</p>
                   </div>
-                </div>
+                </a>
               </li>
               <li class="projects-item">
-                <div class="projects-card">
+                <a class="projects-card" href="">
                   <img
                     class="projects-img"
                     src="./images/project-8.jpg"
@@ -231,10 +231,10 @@
                     </h2>
                     <p class="projects-description">Маркетинг</p>
                   </div>
-                </div>
+                </a>
               </li>
               <li class="projects-item">
-                <div class="projects-card">
+                <a class="projects-card" href="">
                   <img
                     class="projects-img"
                     src="./images/project-9.jpg"
@@ -246,7 +246,7 @@
                     <h2 class="projects-title" lang="en">Growing Business</h2>
                     <p class="projects-description">Приложение</p>
                   </div>
-                </div>
+                </a>
               </li>
             </ul>
           </div>
@@ -286,34 +286,58 @@
 
           <li class="footer-item">
             <p class="footer-item-join">Присоединяйтесь</p>
-            <ul class="team-button-list">
-              <li class="team-button-item">
-                <button class="team-button">
-                  <svg class="team-button-icon" width="20" height="20">
+            <ul class="socials-list">
+              <li class="socials-item">
+                <a
+                  class="socials-link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Instafram"
+                >
+                  <svg class="socials-icon" width="20" height="20">
                     <use href="./icons/sprite.svg#icon-instagram"></use>
                   </svg>
-                </button>
+                </a>
               </li>
-              <li class="team-button-item">
-                <button class="team-button">
-                  <svg class="team-button-icon" width="20" height="20">
+              <li class="socials-item">
+                <a
+                  class="socials-link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="twitter"
+                >
+                  <svg class="socials-icon" width="20" height="20">
                     <use href="./icons/sprite.svg#icon-twitter"></use>
                   </svg>
-                </button>
+                </a>
               </li>
-              <li class="team-button-item">
-                <button class="team-button">
-                  <svg class="team-button-icon" width="20" height="20">
+              <li class="socials-item">
+                <a
+                  class="socials-link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="facebook"
+                >
+                  <svg class="socials-icon" width="20" height="20">
                     <use href="./icons/sprite.svg#icon-facebook"></use>
                   </svg>
-                </button>
+                </a>
               </li>
-              <li class="team-button-item">
-                <button class="team-button">
-                  <svg class="team-button-icon" width="20" height="20">
+              <li class="socials-item">
+                <a
+                  class="socials-link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="linkedin"
+                >
+                  <svg class="socials-icon" width="20" height="20">
                     <use href="./icons/sprite.svg#icon-linkedin"></use>
                   </svg>
-                </button>
+                </a>
               </li>
             </ul>
           </li>
