--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     <header class="header">
       <div class="container header-container">
         <nav class="navigation navigation-container">
-          <a class="logo" href="index.html" lang="en"
-            >Web<span class="logo-header">Studio</span></a
-          >
+          <a class="logo" href="index.html" lang="en">
+            Web<span class="logo-header">Studio</span>
+          </a>
           <ul class="header-list">
             <li class="header-item">
               <a class="header-link current" href="./index.html">Студия</a>
